update youtube video, adjust the nav bar width and max-width to prevent wrap to two lines

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,8 +41,8 @@ header {
 }
 
 nav {
-    width: 50%;
-    max-width: 300px;
+    width: 70%;
+    max-width: 400px;
     height: 50px;
 }
 
@@ -114,6 +114,13 @@ main {
     width: 100%;
     height: 100%;
     border: 0;
+}
+
+figcaption {
+    font-size: 1rem;
+    color: var(--text-color);
+    text-align: center;
+    margin-top: 10px;
 }
 
 footer {
